fix: 完成工具运行时安全边界审查